[gd_scene load_steps=2 format=3 uid="uid://brv0xl0e4dwik"]

[ext_resource type="Script" uid="uid://svo5p4qfgnx4" path="res://Scenes/load.gd" id="1_nekxi"]

[node name="load" type="Node2D"]
script = ExtResource("1_nekxi")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1168.0
offset_bottom = 664.0

[node name="background" type="ColorRect" parent="UI"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0.619608, 1)

[node name="load_ui" type="VBoxContainer" parent="UI"]
layout_mode = 0
offset_right = 1160.0
offset_bottom = 656.0

[node name="title" type="Label" parent="UI/load_ui"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Load Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="spacer1" type="Control" parent="UI/load_ui"]
layout_mode = 2
size_flags_vertical = 3

[node name="load_selection" type="HBoxContainer" parent="UI/load_ui"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 150

[node name="load0" type="VBoxContainer" parent="UI/load_ui/load_selection"]
layout_mode = 2

[node name="save_name" type="Label" parent="UI/load_ui/load_selection/load0"]
layout_mode = 2
text = "Save Slot 1"

[node name="sava_data_info" type="Label" parent="UI/load_ui/load_selection/load0"]
layout_mode = 2
text = "0%
player name
time?
more data?"

[node name="buttons" type="HBoxContainer" parent="UI/load_ui/load_selection/load0"]
layout_mode = 2

[node name="load_button" type="Button" parent="UI/load_ui/load_selection/load0/buttons"]
layout_mode = 2
text = "Load"

[node name="delete_save" type="Button" parent="UI/load_ui/load_selection/load0/buttons"]
layout_mode = 2
text = "Delete"

[node name="load1" type="VBoxContainer" parent="UI/load_ui/load_selection"]
layout_mode = 2

[node name="save_name" type="Label" parent="UI/load_ui/load_selection/load1"]
layout_mode = 2
text = "Save Slot 1"

[node name="sava_data_info" type="Label" parent="UI/load_ui/load_selection/load1"]
layout_mode = 2
text = "0%
player name
time?
more data?"

[node name="buttons" type="HBoxContainer" parent="UI/load_ui/load_selection/load1"]
layout_mode = 2

[node name="load_button" type="Button" parent="UI/load_ui/load_selection/load1/buttons"]
layout_mode = 2
text = "Load"

[node name="delete_save" type="Button" parent="UI/load_ui/load_selection/load1/buttons"]
layout_mode = 2
text = "Delete"

[node name="load2" type="VBoxContainer" parent="UI/load_ui/load_selection"]
layout_mode = 2

[node name="save_name" type="Label" parent="UI/load_ui/load_selection/load2"]
layout_mode = 2
text = "Save Slot 1"

[node name="sava_data_info" type="Label" parent="UI/load_ui/load_selection/load2"]
layout_mode = 2
text = "0%
player name
time?
more data?"

[node name="buttons" type="HBoxContainer" parent="UI/load_ui/load_selection/load2"]
layout_mode = 2

[node name="load_button" type="Button" parent="UI/load_ui/load_selection/load2/buttons"]
layout_mode = 2
text = "Load"

[node name="delete_save" type="Button" parent="UI/load_ui/load_selection/load2/buttons"]
layout_mode = 2
text = "Delete"

[node name="spacer2" type="Control" parent="UI/load_ui"]
layout_mode = 2
size_flags_vertical = 3

[node name="go_back" type="Button" parent="UI/load_ui"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[node name="spacer3" type="Control" parent="UI/load_ui"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="button_up" from="UI/load_ui/go_back" to="." method="_on_go_back_button_up"]
